--- a/mr-wallet/src/main/resources/static/index.html
+++ b/mr-wallet/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Mr.Wallet</title>
     <style>
         *{
-            background-color: #eee;
+            background-color: #f9f9f9;
             border: 0px;
             padding: 0;
             margin: 0;
